Bug 1320200 - Propagate scroll-behavior on a text input to the anonymous scrollable <div> inside it. r=tnikkel

MozReview-Commit-ID: Cur3x41wAfU